--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </section>
 <section id="About">
     <h2>О нас</h2>
-    <p>Этот канал называется ᴋs. В этом канале есть,розыгрыши на всё,так же в моём канале можно стать админом,и еще тут можно познакомиться с разными людьми и стать друзьями!</p>
+    <p>Этот канал называется katrinss. В этом канале есть,розыгрыши на всё,так же в моём канале можно стать админом,и еще тут можно познакомиться с разными людьми и стать друзьями!</p>
 </section>
 <section id="Photo">
     <h2>Наши фото</h2>
